[gd_scene load_steps=8 format=3 uid="uid://b465sei327g5c"]

[ext_resource type="Script" path="res://UI/merchant/merchant-resource-ui.gd" id="1_5dpjm"]
[ext_resource type="Theme" uid="uid://blt1eyj3xshax" path="res://assets/UI/themes/UI-elements/panel-container-secondary.tres" id="1_c3m22"]
[ext_resource type="Texture2D" uid="uid://c5efwq8xwq1dj" path="res://assets/resources/material/Gold.png" id="3_2742o"]
[ext_resource type="Texture2D" uid="uid://feedj20e76of" path="res://assets/UI/icons/menu/inventory/Storage.png" id="4_damf6"]
[ext_resource type="Texture2D" uid="uid://cgm6rsehl83up" path="res://assets/UI/icons/menu/left-arrow.png" id="5_f75ci"]
[ext_resource type="Texture2D" uid="uid://bxmunutlqsf7u" path="res://assets/UI/icons/menu/right-arrow.png" id="6_8m66t"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vdfni"]

[node name="MerchantResourceUI" type="PanelContainer"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -21.5
offset_bottom = 21.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource("1_c3m22")
script = ExtResource("1_5dpjm")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 50

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="Texture" type="TextureRect" parent="MarginContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
expand_mode = 2

[node name="Name" type="Label" parent="MarginContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/HBoxContainer2"]
layout_mode = 2
texture = ExtResource("3_2742o")
expand_mode = 2

[node name="Cost" type="Label" parent="MarginContainer/HBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="Texture" type="TextureRect" parent="MarginContainer/HBoxContainer/HBoxContainer4"]
layout_mode = 2
texture = ExtResource("4_damf6")
expand_mode = 2

[node name="InventoryAmount" type="Label" parent="MarginContainer/HBoxContainer/HBoxContainer4"]
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/HBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_vdfni")

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/HBoxContainer3/PanelContainer"]
layout_mode = 2
texture = ExtResource("5_f75ci")
expand_mode = 2

[node name="LessButton" type="Button" parent="MarginContainer/HBoxContainer/HBoxContainer3/PanelContainer"]
layout_mode = 2
flat = true

[node name="PurchaseAmount" type="Label" parent="MarginContainer/HBoxContainer/HBoxContainer3"]
layout_mode = 2

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer/HBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_vdfni")

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/HBoxContainer3/PanelContainer2"]
layout_mode = 2
texture = ExtResource("6_8m66t")
expand_mode = 2

[node name="MoreButton" type="Button" parent="MarginContainer/HBoxContainer/HBoxContainer3/PanelContainer2"]
layout_mode = 2
flat = true

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/HBoxContainer3/PanelContainer/LessButton" to="." method="_on_less_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/HBoxContainer3/PanelContainer2/MoreButton" to="." method="_on_more_button_pressed"]
